Process input files in Standard JSON mode just like in other modes
- This makes `-` for stdin work.
- `--ignore-missing` now works with `--standard-json`, though it's not very useful because there can be at most one input file.
- Separate errors for situations where there are no input files on the command line (this can be detected in the parser) and where they are not present on disk.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -147,7 +147,10 @@ set(libyul_sources
 detect_stray_source_files("${libyul_sources}" "libyul/")
 
 set(solc_sources
+    solc/CommandLineInterface.cpp
     solc/CommandLineParser.cpp
+    ../solc/CommandLineInterface.h
+    ../solc/CommandLineInterface.cpp
     ../solc/CommandLineParser.h
     ../solc/CommandLineParser.cpp
 )
