--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,6 +54,7 @@ detect_stray_source_files("${libevmasm_sources}" "libevmasm/")
 
 set(liblangutil_sources
     liblangutil/CharStream.cpp
+	liblangutil/DoxyStyleCommentsIterator.cpp
     liblangutil/Scanner.cpp
     liblangutil/SourceLocation.cpp
 )
